# sea-battle-backend

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  install.sh  seabattle_cli.cpp  tcp_server.cpp  test_ui.cpp
project_server/: CMakeLists.txt  main.cpp
project_server/DBAccess/: CMakeLists.txt  DBAccess.cpp
project_server/DBAccess/include/: DBAccess.h
project_server/include/: ClientSocket.h  Data.h  Engine.h  EngineServer.h  IEngine.h  IGameEngine.h  IParser.h  IServer.h  IUser.h  Parser.h  Server.h  ServerSocket.h  Session.h  SessionManager.h  Socket.h  User.h
project_server/src/: ClientSocket.cpp  Engine.cpp  EngineServer.cpp  IEngine.cpp  IGameEngine.cpp  IParser.cpp  IServer.cpp  IUser.cpp  Parser.cpp  Server.cpp  ServerSocket.cpp  Session.cpp  SessionManager.cpp  Socket.cpp  User.cpp
project_server/test/: CMakeLists.txt  main.cpp  tests.cpp
sbcli/: CMakeLists.txt
sbcli/blocks/: field.cpp  field.h  ships.cpp  ships.h
sbcli/components/auth/: auth.cpp  auth.h
sbcli/components/game/: game.cpp  game.h
sbcli/components/menu/: menu.cpp  menu.h
sbcli/config/: config.h  view.h
sbcli/controller/: auth.cpp  auth.h  controller_interface.h  game.cpp  game.h  menu.cpp  menu.h
sbcli/core/: game_client.cpp  game_client.h  test_client.cpp  test_client.h
sbcli/model/: game_model.cpp  game_model.h  model_inteface.h  user_model.cpp  user_model.h
sbcli/network/: network.cpp  network.h  network_interface.h
sbcli/serialization/: serializer.h
sbcli/ui/: auth_console_input.cpp  auth_console_input.h  game_console_input.cpp  game_console_input.h  menu_console_input.cpp  menu_console_input.h  ui_interface.h
sbcli/validation/: validation.h
sbcli/view/: auth_console_input.cpp  auth_console_input.h  game_console_input.cpp  game_console_input.h  game_view.h  menu_console_input.cpp  menu_console_input.h  ui_interface.h
sbutils/: CMakeLists.txt
sbutils/data/: data.cpp  data.h  test_data.cpp  test_data.h
sbutils/serialization/: serializer.cpp  serializer.h
tests/tests_cli/: run_tests.cpp
tests/tests_cli/controller/: test_auth_mock.h
